crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__block_dangling_comments.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
    // headline
  }

  void nested(boolean ready) {
    if (ready) {
      /* keep */
    } else {
      /* else */
    }
  }

  void tail() {
    call();
    /* tail */
  }

  void keyword(boolean ready) {
    do /* loop */ {
      // before assert
      assert ready;
    } while (ready);
  }

  void chain() {
    // keep with chain
    System.out.println("x");
  }
}

diagnostics:
(none)
