crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__body_blank_lines.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
    first();

    second();
    third();

    // keep with fourth
    fourth();
  }
}

diagnostics:
(none)
