crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__empty_method_block.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
  }
}

diagnostics:
(none)
