crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__for_headers.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
    for (int i = 0; i < 10; i++) {
      run(i);
    }
    for (i = 0, j = 0; i < count; i++, j++) {
      run(i, j);
    }
    for (; ready(); tick()) {
      run();
    }
    for (
      int index = startIndex, limit = computeLimit(input);
      index < limit && shouldContinue(index);
      index++, processed++
    ) {
      run(index);
    }
    for (
      i = 0, /* reset */ j = 0;
      i < count;
      i++, // bump
      j++
    ) {
      run(i, j);
    }
    for (;;) {
      run();
    }
    for ( /* keep going */ ;;) {
      run();
    }
    for ( // keep going
    ;;) {
      run();
    }
    for (;; /* close */) {
      run();
    }
  }
}

diagnostics:
(none)
