crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__formatter_ignore_adjacent_ranges.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
    int before = 1;
    // @formatter:off
    int first=1+2;
    // @formatter:on
    // @formatter:off
    int second=3+4;
    // @formatter:on
    int after = 5;
  }
}

diagnostics:
(none)
