crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__formatter_ignore_block.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
    int before = 1;
    // @formatter:off
    int x=       1+2;
    foo( a,b,c );
    // @formatter:on
    int after = 2;
  }
}

diagnostics:
(none)
