crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__formatter_ignore_surrounding_comments.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
    // before ordinary
    // @formatter:off
    int raw=1+2;
    // @formatter:on
    // after ordinary
    int after = 3;
  }
}

diagnostics:
(none)
