crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__formatter_ignore_unterminated.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Unterminated {
  void inMethod() {
    int before = 1;
    // @formatter:off
    int kept   =   2  +  3;
    int also   =   4;
  }

  int after = 5;
}

diagnostics:
(none)
