crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__formatter_ignore_unterminated_tail.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Before {
  int after = 5;
}

// @formatter:off
class Tail {
    int kept   =   6;
}

diagnostics:
(none)
