crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__if_else_braced_bodies.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run() {
    if ( /* guard */ ready) {
      run();
    } else if (waiting) {
      pause();
    } else /* fallback */ {
      stop();
    }
  }

  void comments() {
    if (ready) {
      run();
    } /* after then */ else {
      stop();
    }
    if (waiting) {
      pause();
    } // after wait
    else {
      resume();
    }
  }
}

diagnostics:
(none)
