crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__jump_and_assert_statements.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  int run(Object value) {
    assert value != null : value;
    if (value == null) {
      throw /* problem */ new IllegalArgumentException();
    }
    while (ready()) {
      continue retry;
    }
    return /* result */ 1;
  }

  int choose(int value) {
    return switch (value) {
      case 1 -> 1;
      default -> {
        yield /* fallback */ 2;
      }
    };
  }

  Object scope(int value) {
    return switch (value) {
      case 1 -> {
        yield (value != 0 ? String.valueOf(value) : null);
      }
      default -> "other";
    };
  }
}

diagnostics:
(none)
