crates/jolt_java_fmt/tests/snapshots/corpus__style__statements__labels_and_loop_bodies.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void run(java.util.List<String> values) {
    retry /* label */:
    for ( /* each */ String value : values) {
      if (skip(value)) {
        continue retry /* again */;
      }
      if (stop(value)) {
        break retry /* target */;
      }
      process(value);
    }
    empty /* label */: /* body */
    ;
    while ( /* while */ ready()) {
    }
    do {
      processNext();
    } while ( /* done */ hasNext());
    for ( /* forever */ ;;) {
    }
    synchronized ( /* lock */ this) {
      check();
    }
  }
}

diagnostics:
(none)
